Adding api to delete workspace token
