# core/internal/router/router.go
@@ -58,6 +58,7 @@ func (r *Router) workspaceRoutes() {
 		router.With(r.IsWorkspaceAdmin).Post("/{workspaceID}/roles", r.workspaceHandler.InviteUser)
 		router.With(r.IsWorkspaceAdmin).Delete("/{workspaceID}/roles/{accountID}", r.workspaceHandler.RemoveUser)
 		router.With(r.IsWorkspaceAdmin).Post("/{workspaceID}/tokens", r.workspaceHandler.CreateToken)
+		router.With(r.IsWorkspaceAdmin).Delete("/{workspaceID}/tokens/{tokenID}", r.workspaceHandler.DeleteToken)
 	})
 }
 
